// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bsky actor likes feed views > does include users with creator block relationship in reference lists for creator 1`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "frankie.test",
      "labels": [],
      "viewer": {
        "blockedBy": true,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(3)",
      "handle": "eve.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(2)",
  },
]
`;

exports[`bsky actor likes feed views > does include users with creator block relationship in reference lists for creator 2`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "frankie.test",
      "labels": [],
      "viewer": {
        "blockedBy": true,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(3)",
      "handle": "eve.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(2)",
  },
]
`;

exports[`bsky actor likes feed views > does not include reference lists in getActorLists 1`] = `
[
  {
    "cid": "cids(0)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "mod2",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
  },
  {
    "cid": "cids(1)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "mod1",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(1)",
  },
  {
    "cid": "cids(2)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 2,
    "name": "mod0",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(2)",
  },
  {
    "cid": "cids(3)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "cur2",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(3)",
  },
  {
    "cid": "cids(4)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "cur1",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(4)",
  },
  {
    "cid": "cids(5)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 3,
    "name": "cur0",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(5)",
  },
]
`;

exports[`bsky actor likes feed views > does not include users with creator block relationship in reference and curate lists for signed-out viewers 1`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": [],
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views > does not include users with creator block relationship in reference and curate lists for signed-out viewers 2`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": [],
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views > does not include users with creator block relationship in reference lists for non-creator, in-list viewers 1`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "blocking": "record(2)",
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views > does not include users with creator block relationship in reference lists for non-creator, in-list viewers 2`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "blocking": "record(2)",
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views > does not include users with creator block relationship in reference lists for non-creator, not-in-list viewers 1`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views > does not include users with creator block relationship in reference lists for non-creator, not-in-list viewers 2`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "eve.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views > does return all users regardless of creator block relationship in moderation lists 1`] = `
[
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "greta.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(0)",
  },
  {
    "subject": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "frankie.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "uri": "record(1)",
  },
]
`;

exports[`bsky actor likes feed views > supports using a handle as getList actor param 1`] = `
[
  {
    "cid": "cids(0)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "mod2",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
  },
  {
    "cid": "cids(1)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "mod1",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(1)",
  },
  {
    "cid": "cids(2)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 2,
    "name": "mod0",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(2)",
  },
  {
    "cid": "cids(3)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "cur2",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(3)",
  },
  {
    "cid": "cids(4)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 0,
    "name": "cur1",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(4)",
  },
  {
    "cid": "cids(5)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 3,
    "name": "cur0",
    "purpose": "app.bsky.graph.defs#curatelist",
    "uri": "record(5)",
  },
]
`;
